--- a/androidThibault/app/src/main/res/values-night/themes.xml
+++ b/androidThibault/app/src/main/res/values-night/themes.xml
@@ -1,9 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ThinKIT" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ThinKITApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="windowNoTitle">true</item>
-
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/black</item>
