--- a/androidThibault/app/src/main/res/values/colors.xml
+++ b/androidThibault/app/src/main/res/values/colors.xml
@@ -6,6 +6,10 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="articles">#32143493</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="bluedark">#030D93</color>
+    <color name="bluelight">#91B7FF</color>
+    <color name="bluelight2">#E3EDFF </color>
+    <color name="red">#F5D2CF </color>
+    <color name="green">#CFF5D5 </color>
 </resources>
